feat: Establish A0 foundational axiom and complete theorem architecture refactoring (v0.4.1)
IMPORTANT CHANGE: Complete theoretical architecture refactoring from multi-axiom to single A0-based foundation

• NEW: A0 — Existential Difference as single foundational axiom
• REFACTOR: A1 → T1 (Irreducibility theorem, P+), T1 → T2 (Asymmetry, P-), T2 → T3 (Recursivity, P0)
• REFACTOR: Interface theorems renumbered for canonical SVA ordering (T4/P+, T5/P-, T6/P0)
• REFACTOR: Coherence theorems renumbered with polarity corrections (T7/P+, T8/P-, T9/P0)
• UPDATE: Complete constant and primitive realignment with new theorem derivations
• UPDATE: 25+ major files updated with A0-based architecture and 200+ cross-references
• UPDATE: All 7 template files updated for future consistency
• UPDATE: Meta-system documentation (types, metaphors, Reality Core) aligned with A0 foundation

Establishes unified theoretical foundation with clear A0 → T1-T9 derivation chains and canonical SVA progression across all layers. Maintains epistemological integrity while achieving perfect theoretical consistency.

Files changed: 25+ major documentation files, complete template system, citation metadata

--- a/Delta Theory/00 - Translation Layer/00.0 - Microkernel/00.0 - Microkernel (index).md
+++ b/Delta Theory/00 - Translation Layer/00.0 - Microkernel/00.0 - Microkernel (index).md
@@ -17,7 +17,7 @@ tags:
 
 The Microkernel contains the irreducible foundation of Delta Theory - everything needed for the basic recursive operations that transform difference into stable forms:
 
-- **Core Axioms & Theorems:** Single axiom (A1) and derived theorems (T1, T2) that ground all operations
+- **Core Axiom & Theorems:** Foundational axiom (A0) and derived theorems (T1, T2, T3) that ground all operations
 - **Mathematical Constants:** Derived relationships (π, e, φ) that emerge from the axioms
 - **Operational Boundaries:** System limits (ε, c, Cs) that constrain operations
 - **Control Modulators:** Tuning parameters (∇S, λV, ψA) that modulate system behavior
@@ -32,7 +32,7 @@ This microkernel provides the minimal foundation that could exist standalone, fr
 
 | Section | Description | Key Elements |
 |---------|-------------|-------------|--------------|
-| [[00.0.0.0 - Core Axiom & Theorems (index)]] | Foundational truths | [[A1 — Irreducibility (axiom)]], [[T1 — Asymmetry (theorem)]], [[T2 — Recursivity (theorem)]] |
+| [[00.0.0.0 - Core Axiom & Theorems (index)]] | Foundational truths | [[A0 — Existential Difference (axiom)]], [[T1 — Irreducibility (theorem)]], [[T2 — Asymmetry (theorem)]], [[T3 — Recursivity (theorem)]] |
 | [[00.0.1 - Constants (index)]] | Mathematical anchors | [[π — Closure Geometry Ratio (constant)]], [[e — Natural Transformation Rate (constant)]], [[φ — Asymmetric Stabilization Ratio (constant)]] |
 | [[00.0.2 - Boundaries (index)]] | Operational limits | [[ε — Difference Resolution Quantum (boundary)]], [[c — Difference Propagation Limit (boundary)]], [[Cs — Stability Capacity (boundary)]] |
 | [[00.0.3 - Modulators (index)]] | Control parameters | [[∇S — Structure (Sarkisian) Differentiation Gradient (modulator)]], [[λV — Void (Volozhina) Resonance Threshold (modulator)]], [[ψA — Awareness (Aiza) Phase Coherence Anchor (modulator)]] |
@@ -60,8 +60,8 @@ This microkernel provides the minimal foundation that could exist standalone, fr
 ## Key Principles
 
 1. **Single-Axiom Foundation**
-   - Everything derives from A1 (Irreducibility) and primitive difference (∆)
-   - T1 (Asymmetry) and T2 (Recursivity) are proven necessary consequences
+   - Everything derives from A0 (Existential Difference) and primitive difference (∆)
+   - T1 (Irreducibility), T2 (Asymmetry), and T3 (Recursivity) are proven necessary consequences
    - Clear derivation chains ensure ontological grounding
 
 2. **Minimal Completeness**
@@ -84,6 +84,6 @@ This microkernel provides the minimal foundation that could exist standalone, fr
 ## See Also
 
 - [[00 - Translation Layer (index)]] - Parent translation layer
-- [[A1 — Irreducibility (axiom)]] · [[T1 — Asymmetry (theorem)]] · [[T2 — Recursivity (theorem)]]
+- [[A0 — Existential Difference (axiom)]] · [[T1 — Irreducibility (theorem)]] · [[T2 — Asymmetry (theorem)]] · [[T3 — Recursivity (theorem)]]
 - [[00.1 - Environment Interfaces (index)]] · [[00.2 - Coherence Orchestration (index)]]
 - [[Structure (glossary)]] · [[Void (glossary)]] · [[Awareness (glossary)]] - The triadic foundation
