--- a/Delta Theory/00 - Translation Layer/00.0 - Microkernel/00.0.0 - Core Axiom & Theorems/00.0.0.0 - Core Axiom & Theorems (index).md
+++ b/Delta Theory/00 - Translation Layer/00.0 - Microkernel/00.0.0 - Core Axiom & Theorems/00.0.0.0 - Core Axiom & Theorems (index).md
@@ -15,14 +15,14 @@ tags:
 
 ## Module Overview
 
-The Core Axioms module provides the irreducible foundation of Delta Theory. It defines:
-- **One foundational axiom (A1)** that establishes the minimal ontological base
-- **Two derived theorems (T1, T2)** that follow necessarily from A1
+The Core Axiom & Theorems module provides the foundational basis of Delta Theory. It defines:
+- **One foundational axiom (A0)** that establishes existence through distinguishability
+- **Three derived theorems (T1, T2, T3)** that follow necessarily from A0
 - Their mapping to the SVA triad (Structure, Void, Awareness)
 - The emergence of core constants and boundaries
 - Guidelines for domain-specific implementations
 
-This minimal foundation demonstrates remarkable theoretical elegance: all of ∆-Theory emerges from a single irreducible principle.
+This elegant foundation demonstrates remarkable theoretical unity: all of ∆-Theory emerges from the single principle of existential difference.
 
 ---
 
@@ -30,16 +30,17 @@ This minimal foundation demonstrates remarkable theoretical elegance: all of ∆
 
 | Category | Description | Key Elements |
 |----------|-------------|--------------|
-| Foundational Axiom | Single irreducible principle | [[A1 — Irreducibility (axiom)]] |
-| Derived Theorems | Necessary consequences of A1 | [[T1 — Asymmetry (theorem)]], [[T2 — Recursivity (theorem)]] |
-| SVA Mapping | Polarity and domain alignment | A1 → P0 (Awareness), T1 → P- (Void), T2 → P+ (Structure) |
+| Foundational Axiom | Existence-distinguishability principle | [[A0 — Existential Difference (axiom)]] |
+| Derived Theorems | Necessary consequences of A0 | [[T1 — Irreducibility (theorem)]], [[T2 — Asymmetry (theorem)]], [[T3 — Recursivity (theorem)]] |
+| SVA Mapping | Polarity and domain alignment | A0 → P+/P-/P0 (All), T1 → P+ (Structure), T2 → P- (Void), T3 → P0 (Awareness) |
 | Boundaries | Direct operational limits | ε (resolution), c (propagation), Cs (stability) |
 | Constants | Derived mathematical relationships | e (growth), φ (asymmetric ratio), π (closure ratio) |
 
 The axiom and theorems provide:
-- **A1 (Axiom):** Foundational irreducibility principle with ε-bounded scope
-- **T1 (Theorem):** Derived directionality necessity from A1
-- **T2 (Theorem):** Derived recursivity/closure necessity from A1
+- **A0 (Axiom):** Foundational existence-distinguishability principle enabling all polarities
+- **T1 (Theorem):** Structure preservation through irreducibility (derived from A0)
+- **T2 (Theorem):** Directional flow through asymmetry (derived from A0)
+- **T3 (Theorem):** Pattern recognition through recursivity (derived from A0)
 - Technical and humane mappings for all
 - Clear derivation chains showing logical necessity
 
@@ -48,9 +49,10 @@ The axiom and theorems provide:
 ## Core References
 
 **Core Axiom & Theorems:**
-- [[A1 — Irreducibility (axiom)]] - Foundational irreducibility principle
-- [[T1 — Asymmetry (theorem)]] - Derived directionality necessity
-- [[T2 — Recursivity (theorem)]] - Derived recursivity/closure necessity
+- [[A0 — Existential Difference (axiom)]] - Foundational existence-distinguishability principle
+- [[T1 — Irreducibility (theorem)]] - Structure preservation through irreducibility
+- [[T2 — Asymmetry (theorem)]] - Directional flow through asymmetry
+- [[T3 — Recursivity (theorem)]] - Pattern recognition through recursivity
 
 **Related Modules:**
 - [[00.0.1 - Constants (index)]] - Mathematical relationships from axioms
@@ -64,19 +66,20 @@ The axiom and theorems provide:
 ## Key Principles
 
 1. **Single-Axiom Foundation**
-   - A1 is the foundational axiom covering irreducible distinction
-   - T1 and T2 are derived consequences, not independent principles
-   - Clear derivation chains: A1 → T1, A1 → T2
+   - A0 is the foundational axiom establishing existence through distinguishability
+   - T1, T2, T3 are derived consequences, not independent principles
+   - Clear derivation chains: A0 → T1, A0 → T2, A0 → T3
 
 2. **SVA Triad Alignment**
-   - A1 (Irreducibility) → P0 (Awareness): Distinction itself
-   - T1 (Asymmetry) → P- (Void): Field directionality
-   - T2 (Recursivity) → P+ (Structure): Form-making
+   - A0 (Existential Difference) → P+/P-/P0 (All): Enables all polarities
+   - T1 (Irreducibility) → P+ (Structure): Form preservation
+   - T2 (Asymmetry) → P- (Void): Field directionality
+   - T3 (Recursivity) → P0 (Awareness): Pattern recognition
 
 3. **Derivation Patterns**
-   - ε, e emerge directly from A1 (foundational axiom)
-   - φ, c emerge from T1 (derived asymmetry theorem)
-   - π emerges from T2 (derived recursivity theorem)
+   - ε, e emerge from A0 → T1 (existence and irreducibility)
+   - φ, c emerge from A0 → T2 (existence and asymmetry)
+   - π, Cs emerge from A0 → T3 (existence and recursivity)
 
 See [PRINCIPLES.md](../../../../../PRINCIPLES.md) for domain implementation guidelines.
 
@@ -85,7 +88,8 @@ See [PRINCIPLES.md](../../../../../PRINCIPLES.md) for domain implementation guid
 ## See Also
 
 - [[00.0 - Microkernel (index)]]
-- [[A1 — Irreducibility (axiom)]]
-- [[T1 — Asymmetry (theorem)]]
-- [[T2 — Recursivity (theorem)]]
+- [[A0 — Existential Difference (axiom)]]
+- [[T1 — Irreducibility (theorem)]]
+- [[T2 — Asymmetry (theorem)]]
+- [[T3 — Recursivity (theorem)]]
 - [[Field (glossary)]] · [[Void (glossary)]] · [[Structure (glossary)]] · [[Awareness (glossary)]]
