--- a/Delta Theory/00 - Translation Layer/00.0 - Microkernel/00.0.1 - Constants/00.0.1 - Constants (index).md
+++ b/Delta Theory/00 - Translation Layer/00.0 - Microkernel/00.0.1 - Constants/00.0.1 - Constants (index).md
@@ -11,7 +11,7 @@ tags:
 
 > Mathematical invariants that emerge from the core axioms and theorems: fundamental ratios and rates that govern recursive processes.
 
-**Derivation Trace:** ∆ → A1 (Irreducibility) → T1/T2 (Asymmetry/Recursivity) → Constants (π, e, φ)
+**Derivation Trace:** ∆ → A0 (Existential Difference) → T1/T2/T3 (Irreducibility/Asymmetry/Recursivity) → Constants (e, φ, π)
 
 ---
 
@@ -20,7 +20,7 @@ tags:
 Constants represent the mathematical relationships that emerge necessarily from the foundational axioms and theorems. Unlike boundaries (which set limits) or modulators (which tune behavior), constants express the inherent mathematical structure of recursive difference-based systems.
 
 Each constant:
-- **Emerges logically** from A1, T1, or T2
+- **Emerges logically** from A0 + microkernel theorems (T1, T2, T3)
 - **Maintains dual-register** mapping (technical ↔ humane)
 - **Manifests universally** across domains while allowing domain-specific instantiation
 - **Anchors recursive processes** through stable mathematical relationships
@@ -31,9 +31,9 @@ Each constant:
 
 | Constant | Derivation | Role | Mathematical Form |
 |----------|------------|------|------------------|
-| [[e — Natural Transformation Rate (constant)]] | A1 (Irreducibility) | Growth/transformation | $e = \lim_{n \to \infty}(1 + \frac{1}{n})^n$ |
-| [[π — Closure Geometry Ratio (constant)]] | T2 (Recursivity) | Circular closure | $π = \frac{C}{d}$ |
-| [[φ — Asymmetric Stabilization Ratio (constant)]] | T1 (Asymmetry) | Optimal asymmetric split | $φ = \frac{1+\sqrt{5}}{2}$ |
+| [[e — Natural Transformation Rate (constant)]] | A0+T1 (Existence+Irreducibility) | Growth/transformation | $e = \lim_{n \to \infty}(1 + \frac{1}{n})^n$ |
+| [[φ — Asymmetric Stabilization Ratio (constant)]] | A0+T2 (Existence+Asymmetry) | Optimal asymmetric split | $φ = \frac{1+\sqrt{5}}{2}$ |
+| [[π — Closure Geometry Ratio (constant)]] | A0+T3 (Existence+Recursivity) | Circular closure | $π = \frac{C}{d}$ |
 
 **Type:** All microkernel constants are pure mathematical invariants that emerge directly from foundational axioms.
 
@@ -57,7 +57,7 @@ Related Modules:
 ## Key Principles
 
 1. **Logical Emergence**
-   - All constants derive necessarily from A1, T1, or T2
+   - All constants derive necessarily from A0 + microkernel theorems (T1, T2, T3)
    - Mathematical relationships, not arbitrary values
    - Universal patterns across domains
 
