--- a/Delta Theory/00 - Translation Layer/00.0 - Microkernel/00.0.2 - Boundaries/00.0.2 - Boundaries (index).md
+++ b/Delta Theory/00 - Translation Layer/00.0 - Microkernel/00.0.2 - Boundaries/00.0.2 - Boundaries (index).md
@@ -11,7 +11,7 @@ tags:
 
 > Operational limits that define the feasible envelope for stable recursive forms: resolution thresholds, propagation speeds, and capacity constraints.
 
-**Derivation Trace:** ∆ → A1 (Irreducibility) → T1/T2 (Asymmetry/Recursivity) → Boundaries (ε, c, Cs)
+**Derivation Trace:** ∆ → A0 (Existential Difference) → T1/T2/T3 (Irreducibility/Asymmetry/Recursivity) → Boundaries (ε, c, Cs)
 
 ---
 
@@ -31,9 +31,9 @@ Each boundary:
 
 | Boundary | Derivation | Role | Constraint Type |
 |----------|------------|------|-----------------|
-| [[ε — Difference Resolution Quantum (boundary)]] | A1 (Irreducibility) | Minimal meaningful difference | Lower bound |
-| [[c — Difference Propagation Limit (boundary)]] | T1 (Asymmetry) | Maximum propagation speed | Rate limit |
-| [[Cs — Stability Capacity (boundary)]] | T2 (Recursivity) | Maximum difference load | Upper bound |
+| [[ε — Difference Resolution Quantum (boundary)]] | A0+T1 (Existence+Irreducibility) | Minimal meaningful difference | Lower bound |
+| [[c — Difference Propagation Limit (boundary)]] | A0+T2 (Existence+Asymmetry) | Maximum propagation speed | Rate limit |
+| [[Cs — Stability Capacity (boundary)]] | A0+T3 (Existence+Recursivity) | Maximum difference load | Upper bound |
 
 Each boundary provides operational constraint definition, dual-register mapping, domain manifestations, and formal mathematical relationships.
 
@@ -57,7 +57,7 @@ Each boundary provides operational constraint definition, dual-register mapping,
 ## Key Principles
 
 1. **Operational Constraint Foundation**
-   - Boundaries derive from foundational axioms (A1) and theorems (T1, T2)
+   - Boundaries derive from foundational axiom A0 + microkernel theorems (T1, T2, T3)
    - Define hard operational limits that cannot be exceeded without system breakdown
    - Each boundary addresses a different type of constraint (resolution, speed, capacity)
 
