--- a/Delta Theory/00 - Translation Layer/00.0 - Microkernel/00.0.3 - Modulators/00.0.3 - Modulators (index).md
+++ b/Delta Theory/00 - Translation Layer/00.0 - Microkernel/00.0.3 - Modulators/00.0.3 - Modulators (index).md
@@ -11,7 +11,7 @@ tags:
 
 > Control parameters that tune recursive system behavior: the SVA triad (∇S, λV, ψA) that modulates Structure, Void, and Awareness dynamics.
 
-**Derivation Trace:** ∆ → A1/T1/T2 → Constants & Boundaries → Modulators (∇S, λV, ψA)
+**Derivation Trace:** ∆ → A0/T1/T2/T3 → Constants & Boundaries → Modulators (∇S, λV, ψA)
 
 **Note:** The **[[Polarity (glossary)]]** conceptual framework (P+/P-/P0) is defined in the [[20.0.0 - Glossary (index)]] as it provides the organizational principle that the modulators implement, rather than being a modulator itself.
 
