--- a/Delta Theory/00 - Translation Layer/00.0 - Microkernel/00.0.4 - Structural Primitives/00.0.4 - Structural Primitives (index).md
+++ b/Delta Theory/00 - Translation Layer/00.0 - Microkernel/00.0.4 - Structural Primitives/00.0.4 - Structural Primitives (index).md
@@ -11,7 +11,7 @@ tags:
 
 > Core operations that transform difference into stable forms: the fundamental sequence ∆ → R(·) → ⊚ that implements recursive difference-based construction.
 
-**Derivation Trace:** ∆ (Primitive Difference) → A1/T1/T2 → Primitives (∆, R(·), ⊚)
+**Derivation Trace:** ∆ (Primitive Difference) → A0/T1/T2/T3 → Primitives (∆, R(·), ⊚)
 
 ---
 
@@ -32,9 +32,9 @@ These three operations generate all emergent patterns: Forms (stable results), F
 
 | Primitive | Symbol | Function | Axiom Grounding |
 |-----------|--------|----------|-----------------|
-| [[Delta (primitive)]] | ∆ | Difference detection/generation | A1 (Irreducibility) |
-| [[RelationalEmbedding (primitive)]] | R(·) | Contextual embedding | T1 (Asymmetry) |
-| [[Stabilization (Closure) (primitive)]] | ⊚ | Recursive closure | T2 (Recursivity) |
+| [[Delta (primitive)]] | ∆ | Difference detection/generation | A0+T1 (Existence+Irreducibility) |
+| [[RelationalEmbedding (primitive)]] | R(·) | Contextual embedding | A0+T2 (Existence+Asymmetry) |
+| [[Stabilization (Closure) (primitive)]] | ⊚ | Recursive closure | A0+T3 (Existence+Recursivity) |
 
 ---
 
@@ -62,9 +62,9 @@ Related Modules:
    - Sequence itself is recursively composable under modulator control
 
 2. **Axiom Grounding**
-   - ∆ (Delta): Grounded in A1 (Irreducibility)
-   - R(·) (Relational Embedding): Grounded in T1 (Asymmetry)
-   - ⊚ (Stabilization): Grounded in T2 (Recursivity)
+   - ∆ (Delta): Grounded in A0+T1 (Existence+Irreducibility)
+   - R(·) (Relational Embedding): Grounded in A0+T2 (Existence+Asymmetry)
+   - ⊚ (Stabilization): Grounded in A0+T3 (Existence+Recursivity)
 
 3. **Recursive Composition**
    - Primitives can be applied to outputs of other primitives
