--- a/Delta Theory/00 - Translation Layer/00.0 - Microkernel/00.0.5 - Core Patterns/00.0.5 - Core Patterns (index).md
+++ b/Delta Theory/00 - Translation Layer/00.0 - Microkernel/00.0.5 - Core Patterns/00.0.5 - Core Patterns (index).md
@@ -11,7 +11,7 @@ tags:
 
 > Fundamental patterns that emerge from successful execution of the core primitive sequence ∆ → R(·) → ⊚: the stable configurations, dynamic processes, and contextual fields that arise from recursive difference operations.
 
-**Derivation Trace:** ∆ → A1/T1/T2 → Primitives (∆, R(·), ⊚) → Foundational Patterns (Form, Flow, Field)
+**Derivation Trace:** ∆ → A0/T1/T2/T3 → Primitives (∆, R(·), ⊚) → Foundational Patterns (Form, Flow, Field)
 
 ---
 
