--- a/Delta Theory/00 - Translation Layer/00.1 - Environment Interfaces/00.1.0 - Interface Theorems/00.1.0 - Interface Theorems (index).md
+++ b/Delta Theory/00 - Translation Layer/00.1 - Environment Interfaces/00.1.0 - Interface Theorems/00.1.0 - Interface Theorems (index).md
@@ -5,22 +5,22 @@ tags:
   - "#sublayer/interface"
   - "#status/stable"
   - "#function/observation"
-derivation: A1+T1+T2
+derivation: A0+T1+T2+T3
 ---
 
 # 00.1.0 - Interface Theorems (index)
 
-> Derived theorems governing how structure interacts with fields through boundaries, ports, and surfaces - proven consequences of the core axioms A1, T1, T2.
+> Derived theorems governing how structure interacts with fields through boundaries, ports, and surfaces - proven consequences of the foundational axiom A0 and microkernel theorems T1, T2, T3.
 
 ---
 
 ## Module Overview
 
-This module defines the fundamental theorems that govern interface behavior, derived from the core microkernel axioms:
+This module defines the fundamental theorems that govern interface behavior, derived from the foundational axiom and microkernel theorems:
 
-- **T3 — Interface Discrimination:** Interfaces must discriminate between flows (derived from T1 + A1)
-- **T4 — Interface Identity:** Interface boundaries must maintain coherent identity (derived from T2 + A1)
-- **T5 — Interface Conservation:** Interface operations must preserve difference across boundaries (derived from A1 + T2)
+- **T4 — Interface Conservation:** Interface operations must preserve difference across boundaries (derived from A0 + T3)
+- **T5 — Interface Discrimination:** Interfaces must discriminate between flows (derived from A0 + T2)
+- **T6 — Interface Identity:** Interface boundaries must maintain coherent identity (derived from A0 + T1)
 
 These theorems ensure that field interaction maintains structural stability while enabling controlled exchange with the environment.
 
@@ -30,13 +30,13 @@ These theorems ensure that field interaction maintains structural stability whil
 
 | Category | Description | Key Elements |
 |----------|-------------|--------------|
-| Interface Theorems | Derived consequences | [[T3 — Interface Discrimination (theorem)]], [[T4 — Interface Identity (theorem)]], [[T5 — Interface Conservation (theorem)]] |
-| Axiom Derivation | Core foundations | T3 ← T1+A1, T4 ← T2+A1, T5 ← A1+T2 |
-| Stability Conditions | Required invariants | Discrimination, Coherence, Conservation |
-| Control Relations | Modulator effects | λV (primary), ∇S (boundary), ψA (coherence) |
+| Interface Theorems | Derived consequences | [[T4 — Interface Conservation (theorem)]], [[T5 — Interface Discrimination (theorem)]], [[T6 — Interface Identity (theorem)]] |
+| Axiom Derivation | Core foundations | T4 ← A0+T3, T5 ← A0+T2, T6 ← A0+T1 |
+| Stability Conditions | Required invariants | Conservation, Discrimination, Identity |
+| Control Relations | Modulator effects | λV (void/flow), ∇S (structure/boundary), ψA (awareness/coherence) |
 
 Each theorem provides:
-- Formal derivation from core axioms
+- Formal derivation from foundational axiom A0 + microkernel theorems
 - Technical and humane interpretations
 - Interface primitive mapping
 - Domain manifestations
@@ -47,12 +47,12 @@ Each theorem provides:
 ## Core References
 
 **Interface Theorems:**
-- [[T3 — Interface Discrimination (theorem)]] - Interfaces must discriminate between flows
-- [[T4 — Interface Identity (theorem)]] - Interface boundaries must maintain coherent identity
-- [[T5 — Interface Conservation (theorem)]] - Interface operations must preserve difference
+- [[T4 — Interface Conservation (theorem)]] - Interface operations must preserve difference (A0+T3)
+- [[T5 — Interface Discrimination (theorem)]] - Interfaces must discriminate between flows (A0+T2)
+- [[T6 — Interface Identity (theorem)]] - Interface boundaries must maintain coherent identity (A0+T1)
 
 **Related Modules:**
-- [[00.0.0.0 - Core Axiom & Theorems (index)]] - Foundational axioms that ground interface theorems
+- [[00.0.0.0 - Core Axiom & Theorems (index)]] - Foundational axiom A0 and microkernel theorems T1, T2, T3
 - [[00.1.1 - Constants (index)]] - Interface-specific constants derived from theorems
 - [[00.1.2 - Interface Primitives (index)]] - Primitive operations implementing theorems
 
@@ -61,25 +61,27 @@ Each theorem provides:
 ## Key Principles
 
 1. **Axiom Derivation**
-   - T3 (Discrimination) ← T1 (Asymmetry) + A1 (Irreducibility)
-   - T4 (Identity) ← T2 (Recursivity) + A1 (Irreducibility)
-   - T5 (Conservation) ← A1 (Irreducibility) + T2 (Recursivity)
+   - T4 (Conservation) ← A0 (Existential Difference) + T3 (Recursivity)
+   - T5 (Discrimination) ← A0 (Existential Difference) + T2 (Asymmetry)
+   - T6 (Identity) ← A0 (Existential Difference) + T1 (Irreducibility)
 
 2. **Interface Stability**
-   - Discrimination enables selective flow control
-   - Identity maintains boundary coherence
-   - Conservation preserves difference across boundaries
+   - Conservation preserves difference across boundaries (P+ Structure)
+   - Discrimination enables selective flow control (P- Void)
+   - Identity maintains boundary coherence (P0 Awareness)
 
 3. **Theorem Applications**
-   - T3 governs Port operations (flow discrimination)
-   - T4 governs Surface operations (boundary coherence)
-   - T5 governs Gate operations (flow conservation)
+   - T4 governs Gate operations (flow conservation)
+   - T5 governs Port operations (flow discrimination)
+   - T6 governs Surface operations (boundary identity)
 
 ---
 
 ## See Also
 
 - [[00.1 - Environment Interfaces (index)]] - Parent interface module
-- [[T3 — Interface Discrimination (theorem)]] · [[T4 — Interface Identity (theorem)]] · [[T5 — Interface Conservation (theorem)]]
+- [[A0 — Existential Difference (axiom)]] - Foundational axiom
+- [[T1 — Irreducibility (theorem)]] · [[T2 — Asymmetry (theorem)]] · [[T3 — Recursivity (theorem)]] - Microkernel theorems
+- [[T4 — Interface Conservation (theorem)]] · [[T5 — Interface Discrimination (theorem)]] · [[T6 — Interface Identity (theorem)]] - Interface theorems
 - [[00.0.0.0 - Core Axiom & Theorems (index)]] · [[00.1.2 - Interface Primitives (index)]]
 - [[Structure (glossary)]] · [[Void (glossary)]] · [[Awareness (glossary)]]
