--- a/Delta Theory/00 - Translation Layer/00.1 - Environment Interfaces/00.1.1 - Constants/00.1.1 - Constants (index).md
+++ b/Delta Theory/00 - Translation Layer/00.1 - Environment Interfaces/00.1.1 - Constants/00.1.1 - Constants (index).md
@@ -9,30 +9,30 @@ tags:
 
 # 00.1.1 - Constants (index)
 
-> Interface operational constants: mathematical invariants that emerge directly from interface theorems T3, T4, T5 to enable stable interface operations.
+> Interface operational constants: mathematical invariants that emerge directly from interface theorems T4, T5, T6 to enable stable interface operations.
 
 ---
 
 ## Module Overview
 
-Interface Constants define the mathematical invariants that emerge directly from interface theorems T3, T4, T5. Each constant represents the minimal mathematical requirement for implementing its corresponding theorem in operational interfaces.
+Interface Constants define the mathematical invariants that emerge directly from interface theorems T4, T5, T6. Each constant represents the minimal mathematical requirement for implementing its corresponding theorem in operational interfaces.
 
 **Core Principle:** Constants are the mathematical expressions of theorems - they represent the quantitative aspects that must remain invariant for theorem compliance.
 
 **Derivation Foundation:** All constants derive through the established chain:
 ```
-A1 → T1,T2 → T3,T4,T5 → Interface Constants
+A0 → T1,T2,T3 → T4,T5,T6 → Interface Constants
 ```
 
 ---
 
 ## Content Structure
 
-| Constant | Theorem | Function | Mathematical Role |
-|----------|---------|----------|------------------|
-| **κ_discrimination** | T3 (Discrimination) | Selective permeability rate | Flow discrimination control |
-| **ι_identity** | T4 (Identity) | Boundary coherence rate | Identity persistence control |
-| **σ_conservation** | T5 (Conservation) | Flow conservation rate | Conservation accounting control |
+| Constant | Theorem | Function | Mathematical Role | Polarity |
+|----------|---------|----------|------------------|----------|
+| **σ_conservation** | T4 (Conservation) | Flow conservation rate | Conservation accounting control | P+ |
+| **κ_discrimination** | T5 (Discrimination) | Selective permeability rate | Flow discrimination control | P- |
+| **ι_identity** | T6 (Identity) | Boundary coherence rate | Identity persistence control | P0 |
 
 **Theoretical Foundation:** Each constant represents the irreducible mathematical requirement for stable implementation of its parent theorem.
 
@@ -41,12 +41,12 @@ A1 → T1,T2 → T3,T4,T5 → Interface Constants
 ## Core References
 
 **Interface Constants:**
-- [[κ_discrimination — Interface Discrimination Rate (constant)]] - T3-derived selectivity rate
-- [[ι_identity — Interface Identity Rate (constant)]] - T4-derived boundary coherence rate
-- [[σ_conservation — Interface Conservation Rate (constant)]] - T5-derived conservation tracking rate
+- [[σ_conservation — Interface Conservation Rate (constant)]] - T4-derived conservation tracking rate
+- [[κ_discrimination — Interface Discrimination Rate (constant)]] - T5-derived selectivity rate
+- [[ι_identity — Interface Identity Rate (constant)]] - T6-derived boundary coherence rate
 
 **Related Modules:**
-- [[00.1.0 - Interface Theorems (index)]] - Source theorems T3, T4, T5
+- [[00.1.0 - Interface Theorems (index)]] - Source theorems T4, T5, T6
 - [[00.0.1 - Constants (index)]] - Microkernel foundation constants
 - [[00.2.1 - Constants (index)]] - Coherence layer extensions
 - [[00.1.2 - Interface Primitives (index)]] - Implementation consumers
@@ -56,9 +56,9 @@ A1 → T1,T2 → T3,T4,T5 → Interface Constants
 ## Key Principles
 
 1. **Direct Theorem Derivation**
-   - T3 (Discrimination) → κ_discrimination (selectivity rate)
-   - T4 (Identity) → ι_identity (boundary coherence rate)
-   - T5 (Conservation) → σ_conservation (flow tracking rate)
+   - T4 (Conservation) → σ_conservation (flow tracking rate)
+   - T5 (Discrimination) → κ_discrimination (selectivity rate)
+   - T6 (Identity) → ι_identity (boundary coherence rate)
 
 2. **Mathematical Invariants**
    - Constants represent irreducible mathematical requirements for theorem compliance
@@ -75,6 +75,6 @@ A1 → T1,T2 → T3,T4,T5 → Interface Constants
 ## See Also
 
 - [[00.1 - Environment Interfaces (index)]] - Parent interface module
-- [[κ_discrimination — Interface Discrimination Rate (constant)]] · [[ι_identity — Interface Identity Rate (constant)]] · [[σ_conservation — Interface Conservation Rate (constant)]]
+- [[σ_conservation — Interface Conservation Rate (constant)]] · [[κ_discrimination — Interface Discrimination Rate (constant)]] · [[ι_identity — Interface Identity Rate (constant)]]
 - [[00.1.0 - Interface Theorems (index)]] · [[00.0.1 - Constants (index)]] · [[00.2.1 - Constants (index)]]
 - [[Structure (glossary)]] · [[Void (glossary)]] · [[Awareness (glossary)]]
