--- a/Delta Theory/00 - Translation Layer/00.1 - Environment Interfaces/00.1.2 - Interface Primitives/00.1.2 - Interface Primitives (index).md
+++ b/Delta Theory/00 - Translation Layer/00.1 - Environment Interfaces/00.1.2 - Interface Primitives/00.1.2 - Interface Primitives (index).md
@@ -17,8 +17,8 @@ tags:
 
 This module defines the three fundamental interface primitives that enable controlled field interaction, derived from the full structural primitive sequence (∆ → R(·) → ⊚ → F):
 
-- **Port:** Flow control and directional management (from ∆ → R(·) → ⊚ → F applied to flow contexts)
 - **Gate:** Threshold activation and condition monitoring (from ∆ → R(·) → ⊚ → F applied to threshold contexts)
+- **Port:** Flow control and directional management (from ∆ → R(·) → ⊚ → F applied to flow contexts)
 - **Surface:** Boundary exposure and permeability control (from ∆ → R(·) → ⊚ → F applied to boundary contexts)
 
 These primitives work together as the **core interface operations** that implement structure-field interaction. They are supported by Operational Patterns (such as Buffer) which provide additional capabilities derived from modulator effects.
@@ -27,14 +27,14 @@ These primitives work together as the **core interface operations** that impleme
 
 ## Content Structure
 
-| Category | Description | Key Elements |
-|----------|-------------|--------------|
-| Interface Primitives | Core operations | [[Port (primitive)]], [[Gate (primitive)]], [[Surface (primitive)]] |
-| Primitive Derivation | Structural grounding | ∆ → R(·) → ⊚ → F applied to flow/threshold/boundary contexts |
-| Theorem Mapping | Grounding principles | T3 → Port, T4 → Surface, T5 → Gate |
-| Operational Flow | Interface sequence | Port (receive) → Gate (evaluate) → Surface (expose) |
-| Support Patterns | Enhancement functions | Extended patterns (when implemented) |
-| Modulator Effects | Control parameters | λV (threshold), ∇S (boundary), ψA (coherence) |
+| Category | Description | Key Elements | Polarity |
+|----------|-------------|--------------|----------|
+| Interface Primitives | Core operations | [[Port (primitive)]], [[Gate (primitive)]], [[Surface (primitive)]] | P-/P+/P0 |
+| Primitive Derivation | Structural grounding | ∆ → R(·) → ⊚ → F applied to flow/threshold/boundary contexts | SVA triad |
+| Theorem Mapping | Grounding principles | T4 → Gate (P+), T5 → Port (P-), T6 → Surface (P0) | P+ → P- → P0 |
+| Operational Flow | Interface sequence | Port (receive) → Gate (evaluate) → Surface (expose) | Canonical |
+| Support Patterns | Enhancement functions | Extended patterns (when implemented) | Modulated |
+| Modulator Effects | Control parameters | λV (threshold), ∇S (boundary), ψA (coherence) | SVA control |
 
 Each primitive provides:
 - Technical and humane mappings
@@ -52,7 +52,7 @@ Each primitive provides:
 - [[Surface (primitive)]] - Boundary exposure and permeability control
 
 **Related Modules:**
-- [[00.1.0 - Interface Theorems (index)]] - Theoretical foundation (T3, T4, T5)
+- [[00.1.0 - Interface Theorems (index)]] - Theoretical foundation (T4, T5, T6)
 - [[00.0.4 - Structural Primitives (index)]] - Derivation source (∆, R(·), ⊚)
 - [[00.1.1 - Constants (index)]] - Interface timing constants
 - [[00.1 - Environment Interfaces (index)]] - Parent interface module
@@ -67,14 +67,14 @@ Each primitive provides:
    - Each primitive implements the full structural sequence in its domain
 
 2. **Theorem Grounding**
-   - Port operations implement T3 (Interface Discrimination) principles
-   - Surface operations implement T4 (Interface Identity) principles
-   - Gate operations implement T5 (Interface Conservation) principles
+   - Gate operations implement T4 (Interface Conservation) principles
+   - Port operations implement T5 (Interface Discrimination) principles
+   - Surface operations implement T6 (Interface Identity) principles
 
 3. **Interface Coordination**
    - Primitives work together as coordinated interface operations
    - Canonical sequence: Port (receive) → Gate (evaluate) → Surface (expose)
-   - Each primitive respects interface constants (κ_discrimination, ι_identity, σ_conservation)
+   - Each primitive respects interface constants (σ_conservation, κ_discrimination, ι_identity)
 
 ---
 
