--- a/Delta Theory/00 - Translation Layer/00.2 - Coherence Orchestration/00.2 - Coherence Orchestration (index).md
+++ b/Delta Theory/00 - Translation Layer/00.2 - Coherence Orchestration/00.2 - Coherence Orchestration (index).md
@@ -40,9 +40,9 @@ This coherence layer enables complete orchestration of system coherence across a
 
 ## Core References
 
-- **Foundation:** [[A1 — Irreducibility (axiom)]] → [[T2 — Asymmetric Embedding (theorem)]]
-- **Interface Extension:** [[T4 — Interface Identity (theorem)]] · [[T5 — Interface Conservation (theorem)]]
-- **Coherence Theorems:** [[T6 — Temporal Continuity (theorem)]] · [[T7 — Memory Coherence (theorem)]] · [[T8 — Recovery Stability (theorem)]]
+- **Foundation:** [[T1 — Irreducibility (axiom)]] → [[T2 — Asymmetric Embedding (theorem)]]
+- **Interface Extension:** [[T6 — Interface Identity (theorem)]] · [[T4 — Interface Conservation (theorem)]]
+- **Coherence Theorems:** [[T7 — Temporal Continuity (theorem)]] · [[T9 — Memory Coherence (theorem)]] · [[T8 — Recovery Stability (theorem)]]
 
 ---
 
