--- a/Delta Theory/00 - Translation Layer/00.2 - Coherence Orchestration/00.2.0 - Coherence Theorems/00.2.0 - Coherence Theorems (index).md
+++ b/Delta Theory/00 - Translation Layer/00.2 - Coherence Orchestration/00.2.0 - Coherence Theorems/00.2.0 - Coherence Theorems (index).md
@@ -17,9 +17,9 @@ tags:
 
 This module defines the fundamental theorems that govern coherence orchestration, derived from the interface theorems and extended to temporal, state, and stability dimensions:
 
-- **T6 — Temporal Continuity:** Interface identity must persist coherently through time
-- **T7 — Memory Coherence:** Information must be preserved across state transitions
-- **T8 — Recovery Stability:** Systems must discriminate between perturbations and stability
+- **T7 — Temporal Continuity:** Interface identity must persist coherently through time (extends T6)
+- **T8 — Recovery Stability:** Systems must discriminate between perturbations and stability (extends T5)
+- **T9 — Memory Coherence:** Information must be preserved across state transitions (extends T4)
 
 These theorems ensure that system coherence is maintained across temporal, state, and stability boundaries beyond interface operational capacity. They follow the dimensional extension pattern from interface theorems, providing the theoretical foundation for coherence orchestration operations.
 
@@ -27,29 +27,29 @@ These theorems ensure that system coherence is maintained across temporal, state
 
 ## Content Structure
 
-| Category | Description | Key Elements |
-|----------|-------------|--------------|
-| [[T6 — Temporal Continuity (theorem)]] | Identity persistence through time | Temporal identity maintenance, coherence windows |
-| [[T7 — Memory Coherence (theorem)]] | Information preservation across states | State transition coherence, memory conservation |
-| [[T8 — Recovery Stability (theorem)]] | Stability discrimination for recovery | Perturbation discrimination, recovery coordination |
+| Category | Description | Key Elements | Polarity |
+|----------|-------------|--------------|----------|
+| [[T7 — Temporal Continuity (theorem)]] | Identity persistence through time | Temporal identity maintenance, coherence windows | P+ |
+| [[T8 — Recovery Stability (theorem)]] | Stability discrimination for recovery | Perturbation discrimination, recovery coordination | P- |
+| [[T9 — Memory Coherence (theorem)]] | Information preservation across states | State transition coherence, memory conservation | P0 |
 
 Each entry provides:
-- Formal derivation from interface theorems
-- Technical and humane interpretations
-- Coherence orchestration mapping
-- Domain manifestations and applications
+- Formal derivation from interface theorems following canonical SVA progression
+- Technical and humane interpretations with polarity alignment
+- Coherence orchestration mapping (T7/P+ → T8/P- → T9/P0)
+- Domain manifestations and temporal/state/stability applications
 
 ---
 
 ## Core References
 
 **Coherence Theorems:**
-- [[T6 — Temporal Continuity (theorem)]] - Identity persistence through time
-- [[T7 — Memory Coherence (theorem)]] - Information preservation across states
+- [[T7 — Temporal Continuity (theorem)]] - Identity persistence through time
 - [[T8 — Recovery Stability (theorem)]] - Stability discrimination for recovery
+- [[T9 — Memory Coherence (theorem)]] - Information preservation across states
 
 **Related Modules:**
-- [[00.1.0 - Interface Theorems (index)]] - Foundation theorems (T3, T4, T5)
+- [[00.1.0 - Interface Theorems (index)]] - Foundation theorems (T4, T5, T6)
 - [[00.0.0.0 - Core Axiom & Theorems (index)]] - Ultimate theoretical basis
 - [[00.2.1 - Constants (index)]] - Coherence constants derived from theorems
 - [[00.2.2 - Coherence Primitives (index)]] - Primitive operations implementing theorems
@@ -59,13 +59,13 @@ Each entry provides:
 ## Key Principles
 
 1. **Dimensional Extension**
-   - Extend interface theorems (T3, T4, T5) to coherence orchestration contexts
+   - Extend interface theorems (T4, T5, T6) to coherence orchestration contexts
    - Apply dimensional extension pattern: spatial → temporal/state/stability
    - All coherence theorems must derive from interface theorems
 
 2. **Coherence Orchestration**
-   - Complete set for coherence orchestration (T6, T7, T8)
-   - Coordinate coherence operations through polarity-based flow (T6 → T7 → T8)
+   - Complete set for coherence orchestration (T7, T8, T9)
+   - Coordinate coherence operations through polarity-based flow (T7/P+ → T8/P- → T9/P0)
    - Primary modulator ψA (Awareness) controls all coherence timing
 
 3. **Theoretical Consistency**
@@ -78,6 +78,6 @@ Each entry provides:
 ## See Also
 
 - [[00.2 - Coherence Orchestration (index)]] - Parent coherence orchestration module
-- [[T6 — Temporal Continuity (theorem)]] · [[T7 — Memory Coherence (theorem)]] · [[T8 — Recovery Stability (theorem)]]
+- [[T7 — Temporal Continuity (theorem)]] · [[T8 — Recovery Stability (theorem)]] · [[T9 — Memory Coherence (theorem)]]
 - [[00.1.0 - Interface Theorems (index)]] · [[00.0.0.0 - Core Axiom & Theorems (index)]]
 - [[Structure (glossary)]] · [[Void (glossary)]] · [[Awareness (glossary)]]
