--- a/Delta Theory/00 - Translation Layer/00.2 - Coherence Orchestration/00.2.1 - Constants/00.2.1 - Constants (index).md
+++ b/Delta Theory/00 - Translation Layer/00.2 - Coherence Orchestration/00.2.1 - Constants/00.2.1 - Constants (index).md
@@ -9,18 +9,18 @@ tags:
 
 # 00.2.1 - Constants (index)
 
-> Mathematical invariants governing coherence orchestration rates and tolerances — derived from coherence theorems T6, T7, T8 to establish operational parameters for temporal, memory, and recovery coordination.
+> Mathematical invariants governing coherence orchestration rates and tolerances — derived from coherence theorems T7, T8, T9 to establish operational parameters for memory, recovery, and temporal coordination.
 
 ---
 
 ## Module Overview
 
-This module defines the mathematical constants that govern coherence orchestration, derived from the coherence theorems T6, T7, T8. These constants provide operational parameters for temporal coherence, memory coherence, and recovery coherence coordination.
+This module defines the mathematical constants that govern coherence orchestration, derived from the coherence theorems T7, T8, T9. These constants provide operational parameters for memory coherence, recovery coherence, and temporal coherence coordination.
 
 The coherence constants include:
 - **Temporal Constants:** Parameters governing temporal identity persistence and coherence timing
-- **Memory Constants:** Parameters governing information retention and state transition coherence
 - **Recovery Constants:** Parameters governing stability discrimination and recovery coordination
+- **Memory Constants:** Parameters governing information retention and state transition coherence
 
 These constants enable coherence orchestration operations by providing mathematical foundations for rates, tolerances, and thresholds that maintain system coherence across temporal, state, and stability boundaries.
 
@@ -28,11 +28,11 @@ These constants enable coherence orchestration operations by providing mathemati
 
 ## Content Structure
 
-| Category | Description | Key Elements |
-|----------|-------------|--------------|
-| Temporal Constants | T6-derived temporal parameters | r_temporal (coherence maintenance rate) |
-| Memory Constants | T7-derived memory parameters | r_memory (maintenance rate), γ_retention (retention factor) |
-| Recovery Constants | T8-derived recovery parameters | r_stability (assessment rate), δ_recovery (discrimination sensitivity) |
+| Category | Description | Key Elements | Polarity |
+|----------|-------------|--------------|----------|
+| Temporal Constants | T7-derived temporal parameters | r_temporal (P+) | P+ |
+| Recovery Constants | T8-derived recovery parameters | r_stability (P-), δ_recovery (P-) | P-/P- |
+| Memory Constants | T9-derived memory parameters | r_memory (P0), γ_retention (P0) | P0/P0 |
 
 Each entry provides:
 - Direct derivation from coherence theorems
@@ -45,14 +45,14 @@ Each entry provides:
 ## Core References
 
 **Coherence Constants:**
-- [[r_temporal — Temporal Continuity Maintenance Rate (constant)]] - T6-derived temporal continuity rate
-- [[r_memory — Memory Coherence Maintenance Rate (constant)]] - T7-derived memory maintenance rate
+- [[r_temporal — Temporal Continuity Maintenance Rate (constant)]] - T7-derived temporal continuity rate
 - [[r_stability — Stability Assessment Rate (constant)]] - T8-derived stability assessment rate
-- [[γ_retention — Memory Retention Factor (constant)]] - T7-derived retention efficiency factor
 - [[δ_recovery — Recovery Discrimination Sensitivity (constant)]] - T8-derived recovery sensitivity
+- [[r_memory — Memory Coherence Maintenance Rate (constant)]] - T9-derived memory maintenance rate
+- [[γ_retention — Memory Retention Factor (constant)]] - T9-derived retention efficiency factor
 
 **Related Modules:**
-- [[00.2.0 - Coherence Theorems (index)]] - Source theorems (T6, T7, T8)
+- [[00.2.0 - Coherence Theorems (index)]] - Source theorems (T7, T8, T9)
 - [[00.0.1 - Constants (index)]] - Microkernel foundation constants
 - [[00.1.1 - Constants (index)]] - Interface layer constants
 - [[00.2.2 - Coherence Primitives (index)]] - Implementation consumers
@@ -62,10 +62,10 @@ Each entry provides:
 ## Key Principles
 
 1. **Direct Theorem Derivation**
-   - All coherence constants must derive from coherence theorems (T6, T7, T8)
-   - T6 (Temporal) → r_temporal (maintenance rate)
-   - T7 (Memory) → r_memory, γ_retention (maintenance rate, retention factor)
-   - T8 (Recovery) → r_stability, δ_recovery (assessment rate, discrimination sensitivity)
+   - All coherence constants must derive from coherence theorems (T7, T8, T9)
+   - T7 (Temporal/P+) → r_temporal (P+) - maintenance rate
+   - T8 (Recovery/P-) → r_stability (P-), δ_recovery (P-) - assessment rate, discrimination sensitivity
+   - T9 (Memory/P0) → r_memory (P0), γ_retention (P0) - maintenance rate, retention factor
 
 2. **Mathematical Foundations**
    - Constants provide mathematical foundations for coherence modulators and primitives
@@ -82,6 +82,6 @@ Each entry provides:
 ## See Also
 
 - [[00.2 - Coherence Orchestration (index)]] - Parent coherence orchestration module
-- [[r_temporal — Temporal Continuity Maintenance Rate (constant)]] · [[r_memory — Memory Coherence Maintenance Rate (constant)]] · [[r_stability — Stability Assessment Rate (constant)]]
+- [[r_temporal — Temporal Continuity Maintenance Rate (constant)]] · [[r_stability — Stability Assessment Rate (constant)]] · [[r_memory — Memory Coherence Maintenance Rate (constant)]]
 - [[00.2.0 - Coherence Theorems (index)]] · [[00.0.1 - Constants (index)]] · [[00.1.1 - Constants (index)]]
 - [[Structure (glossary)]] · [[Void (glossary)]] · [[Awareness (glossary)]]
