--- a/Delta Theory/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.0 - Templates/20.1.0 - Templates (index).md
+++ b/Delta Theory/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.0 - Templates/20.1.0 - Templates (index).md
@@ -76,12 +76,12 @@ Related Modules:
 - **Cross-Reference Network:** Complete linking guidelines for architectural consistency
 
 **Current Component Coverage:**
-- **Axioms & Theorems:** A1, T1, T2 (microkernel) + T3, T4, T5 (interface) + T6, T7, T8 (coherence)
-- **Constants:** π, e, φ (microkernel) + κ, ι, σ (interface) + r_temporal, r_memory, r_stability, γ_retention, δ_recovery (coherence)
+- **Axioms & Theorems:** A0, T1, T2, T3 (microkernel) + T4, T5, T6 (interface) + T7, T8, T9 (coherence)
+- **Constants:** π, e, φ (microkernel) + σ, κ, ι (interface) + r_temporal, r_memory, r_stability, γ_retention, δ_recovery (coherence)
 - **Boundaries:** ε, c, Cs (microkernel operational limits)
 - **Modulators:** ∇S, λV, ψA (microkernel SVA control parameters)
-- **Primitives:** ∆, R(·), ⊚ (structural) + Port, Gate, Surface (interface) + Memory, Phase, Recovery (coherence)
-- **Patterns:** Form, Flow, Field (microkernel) + Buffer, Filter, Router (interface) + Synchronization, Persistence, Resilience (coherence)
+- **Primitives:** ∆, R(·), ⊚ (structural) + Gate, Port, Surface (interface) + Memory, Recovery, Phase (coherence)
+- **Patterns:** Form, Flow, Field (microkernel) + Router, Filter, Buffer (interface) + Persistence, Resilience, Synchronization (coherence)
 
 **Template Usage Guidelines:**
 - Remove all LLM instructions from final files
