--- a/Delta Theory/20 - Informational Layer/20.3 - Reflective Maps & Cultural Flows/20.3.0 - Metaphors & Structural Maps/20.3.0 - Metaphors & Structural Maps (index).md
+++ b/Delta Theory/20 - Informational Layer/20.3 - Reflective Maps & Cultural Flows/20.3.0 - Metaphors & Structural Maps/20.3.0 - Metaphors & Structural Maps (index).md
@@ -70,7 +70,7 @@ Each metaphor provides universal ontological bridge disclaimer, structural coher
 - [[Cognitive Scaling Limits — Signal Speed and Coherence Windows in Biological Intelligence]]
 
 **Translation Layer Foundations:**
-- [[00.0.0.0 - Core Axiom & Theorems (index)]] - A1, A2, A3 axioms providing structural coherence criteria
+- [[00.0.0.0 - Core Axiom & Theorems (index)]] - A0 axiom and T1, T2, T3 theorems providing structural coherence criteria
 - [[00.0.3 - Modulators (index)]] - ∇S, λV, ψA modulators referenced in metaphorical frameworks
 - [[00.0.5 - Core Patterns (index)]] - Form, Flow, Field patterns underlying structural metaphors
 
@@ -97,7 +97,7 @@ Each metaphor provides universal ontological bridge disclaimer, structural coher
    - Preserve essential relationships even with incomplete details
    - Maintain triadic dynamics (P⁺, P⁻, P⁰) at appropriate scales
    - Enable recursive embedding for further development
-   - Resonate with Delta Theory axioms (A1, A2, A3)
+   - Resonate with Delta Theory axiom and theorems (A0, T1, T2, T3)
 
 4. **Developmental Functionality Standards**
    - Open new questions rather than closing understanding
