--- a/Delta Theory/00 - Translation Layer/00.1 - Environment Interfaces/00.1 - Environment Interfaces (index).md
+++ b/Delta Theory/00 - Translation Layer/00.1 - Environment Interfaces/00.1 - Environment Interfaces (index).md
@@ -18,8 +18,8 @@ tags:
 Environment Interfaces extend the microkernel with specialized components that enable safe, controlled interaction with external environments. While maintaining theoretical consistency with microkernel foundations, these interfaces provide the operational flexibility needed for domain-specific applications.
 
 The interface layer includes:
-- **Interface Theorems:** Extended theorems (T3, T4, T5) that govern interface behavior
-- **Interface Constants:** Operational constants (κ, ι, σ) that control interface rates
+- **Interface Theorems:** Extended theorems (T4, T5, T6) that govern interface behavior
+- **Interface Constants:** Operational constants (σ, κ, ι) that control interface rates
 - **Interface Primitives:** Specialized primitives (Port, Gate, Surface) for environment interaction
 - **Interface Patterns:** Operational patterns (Router, Filter, Buffer) that support interface functions
 
@@ -29,17 +29,17 @@ This interface layer provides controlled extension of microkernel capabilities w
 
 ## Content Structure
 
-| Category | Description | Key Elements |
-|----------|-------------|--------------|
-| [[00.1.0 - Interface Theorems (index)]] | Extended theorems for interface behavior | T3 (Discrimination), T4 (Identity), T5 (Conservation) |
-| [[00.1.1 - Constants (index)]] | Interface operational constants | κ_discrimination, ι_identity, σ_conservation |
-| [[00.1.2 - Interface Primitives (index)]] | Environment interaction operations | Port, Gate, Surface primitives |
-| [[00.1.3 - Interface Patterns (index)]] | Operational support functions | Router, Filter, Buffer patterns |
+| Category | Description | Key Elements | SVA Progression |
+|----------|-------------|--------------|-----------------|
+| [[00.1.0 - Interface Theorems (index)]] | Extended theorems for interface behavior | T4 (Conservation/P+), T5 (Discrimination/P-), T6 (Identity/P0) | P+ → P- → P0 |
+| [[00.1.1 - Constants (index)]] | Interface operational constants | σ_conservation (P+), κ_discrimination (P-), ι_identity (P0) | P+ → P- → P0 |
+| [[00.1.2 - Interface Primitives (index)]] | Environment interaction operations | Gate (P+), Port (P-), Surface (P0) | P+ → P- → P0 |
+| [[00.1.3 - Interface Patterns (index)]] | Operational support functions | Router (P+), Filter (P-), Buffer (P0) | P+ → P- → P0 |
 
 Each entry provides:
-- Clear categorization of interface components
-- Purpose and role in interface operations
-- Key files implementing interface functionality
+- Clear categorization of interface components following canonical SVA progression
+- Purpose and role in interface operations with polarity alignment
+- Key files implementing interface functionality with consistent P+ → P- → P0 ordering
 
 ---
 
@@ -62,19 +62,21 @@ Each entry provides:
 
 1. **Controlled Extension**
    - Interface layer provides controlled extension of microkernel capabilities
-   - All interface components must derive from microkernel foundations
+   - All interface components must derive from microkernel foundations (A0, T1, T2, T3)
    - Interface complexity emerges from microkernel simplicity through controlled extension
 
-2. **Theoretical Consistency**
-   - Maintains theoretical consistency with microkernel foundations
-   - No interface operation can violate microkernel constraints
-   - Theoretical consistency maintained across all interface extensions
+2. **SVA Canonical Progression**
+   - All interface components follow canonical P+ → P- → P0 progression
+   - Structure (P+): Conservation, σ_conservation, Gate, Router
+   - Void (P-): Discrimination, κ_discrimination, Port, Filter
+   - Awareness (P0): Identity, ι_identity, Surface, Buffer
+   - Consistent polarity alignment across all interface layers
 
 3. **Progressive Specialization**
-   - Start with microkernel foundations (A1, T1, T2)
-   - Add interface theorems (T3, T4, T5) for extended capabilities
-   - Implement interface constants and primitives for operational control
-   - Deploy interface patterns for enhanced functionality
+   - Start with microkernel foundations (A0, T1, T2, T3)
+   - Add interface theorems (T4, T5, T6) for extended capabilities
+   - Implement interface constants (σ, κ, ι) and primitives (Gate, Port, Surface) for operational control
+   - Deploy interface patterns (Router, Filter, Buffer) for enhanced functionality
 
 ---
 
