--- a/Delta Theory/00 - Translation Layer/00.2 - Coherence Orchestration/00.2.2 - Coherence Primitives/00.2.2 - Coherence Primitives (index).md
+++ b/Delta Theory/00 - Translation Layer/00.2 - Coherence Orchestration/00.2.2 - Coherence Primitives/00.2.2 - Coherence Primitives (index).md
@@ -27,13 +27,13 @@ These primitives work together as the core coherence operations that implement t
 
 ## Content Structure
 
-| Category | Description | Key Elements |
-|----------|-------------|--------------|
-| Coherence Primitives | Core operations | [[Memory (primitive)]], [[Phase (primitive)]], [[Recovery (primitive)]] |
-| Primitive Derivation | Structural grounding | ∆ → R(·) → ⊚ applied to information/temporal/stability contexts |
-| Theorem Mapping | Grounding principles | T7 → Memory, T6 → Phase, T8 → Recovery |
-| Operational Flow | Coherence sequence | Memory (preserve) → Phase (synchronize) → Recovery (restore) |
-| Control Parameters | Timing constants | γ_retention, r_memory, r_temporal, r_stability, δ_recovery |
+| Category | Description | Key Elements | Polarity |
+|----------|-------------|--------------|----------|
+| Coherence Primitives | Core operations | [[Memory (primitive)]], [[Recovery (primitive)]], [[Phase (primitive)]] | P+/P-/P0 |
+| Primitive Derivation | Structural grounding | ∆ → R(·) → ⊚ applied to information/stability/temporal contexts | SVA triad |
+| Theorem Mapping | Grounding principles | T9 → Memory (P+), T8 → Recovery (P-), T7 → Phase (P0) | P+ → P- → P0 |
+| Operational Flow | Coherence sequence | Memory (preserve) → Recovery (restore) → Phase (synchronize) | Canonical |
+| Control Parameters | Timing constants | r_temporal (P+), r_memory (P0), γ_retention (P0), r_stability (P-), δ_recovery (P-) | SVA balance |
 | Modulator Effects | Enhancement control | ∇S (structure), λV (threshold), ψA (coherence) |
 
 Each primitive provides technical and humane mappings, operational semantics, control interfaces, and domain manifestations.
@@ -43,9 +43,9 @@ Each primitive provides technical and humane mappings, operational semantics, co
 ## Core References
 
 **Coherence Primitives:**
-- [[Memory (primitive)]] - Information preservation primitive for maintaining data across state transitions
-- [[Phase (primitive)]] - Temporal synchronization primitive for coordinating timing across operations
-- [[Recovery (primitive)]] - Stability restoration primitive for managing perturbation responses
+- [[Memory (primitive)]] - Information preservation primitive for maintaining data across state transitions (P+)
+- [[Recovery (primitive)]] - Stability restoration primitive for managing perturbation responses (P-)
+- [[Phase (primitive)]] - Temporal synchronization primitive for coordinating timing across operations (P0)
 
 **Related Modules:**
 - [[00.0.4 - Structural Primitives (index)]] - Foundational primitives that coherence primitives extend
@@ -63,12 +63,12 @@ Each primitive provides technical and humane mappings, operational semantics, co
    - Each primitive implements the full structural sequence in its domain
 
 2. **Theorem Grounding**
-   - Memory implements T7 (Memory Coherence) principles
-   - Phase implements T6 (Temporal Continuity) principles
+   - Memory implements T9 (Memory Coherence) principles
    - Recovery implements T8 (Recovery Stability) principles
+   - Phase implements T7 (Temporal Continuity) principles
 
 3. **Coherence Orchestration**
-   - Primitives work together in canonical sequence: Memory → Phase → Recovery
+   - Primitives work together in canonical sequence: Memory → Recovery → Phase (P+ → P- → P0)
    - Coherence complexity emerges from structural simplicity through specialized application
    - No coherence operation can violate microkernel boundaries (ε, c, Cs)
 
@@ -77,6 +77,6 @@ Each primitive provides technical and humane mappings, operational semantics, co
 ## See Also
 
 - [[00.2 - Coherence Orchestration (index)]] - Parent coherence orchestration module
-- [[Memory (primitive)]] · [[Phase (primitive)]] · [[Recovery (primitive)]]
+- [[Memory (primitive)]] · [[Recovery (primitive)]] · [[Phase (primitive)]]
 - [[00.0.4 - Structural Primitives (index)]] · [[00.2.0 - Coherence Theorems (index)]] · [[00.2.1 - Constants (index)]]
 - [[Structure (glossary)]] · [[Void (glossary)]] · [[Awareness (glossary)]]
