--- a/Delta Theory/00 - Translation Layer/00.2 - Coherence Orchestration/00.2.3 - Coherence Patterns/00.2.3 - Coherence Patterns (index).md
+++ b/Delta Theory/00 - Translation Layer/00.2 - Coherence Orchestration/00.2.3 - Coherence Patterns/00.2.3 - Coherence Patterns (index).md
@@ -17,20 +17,20 @@ tags:
 
 This module defines the three fundamental coherence patterns that provide enhanced functionality for coherence orchestration operations, derived from modulator effects applied to coherence contexts:
 
-- **Synchronization:** Temporal alignment pattern for coordinating operations across time (derived from ψA modulator effects)
 - **Persistence:** Memory preservation pattern for maintaining information across contexts (derived from ∇S modulator effects)
 - **Resilience:** Recovery coordination pattern for managing system adaptation (derived from λV modulator effects)
+- **Synchronization:** Temporal alignment pattern for coordinating operations across time (derived from ψA modulator effects)
 
-These patterns work together as enhanced coherence operations that extend the capabilities of coherence primitives through modulator-driven functionality. They operate in canonical integration: Persistence (preserve) ↔ Synchronization (coordinate) ↔ Resilience (adapt).
+These patterns work together as enhanced coherence operations that extend the capabilities of coherence primitives through modulator-driven functionality. They operate in canonical integration: Persistence (preserve) ↔ Resilience (adapt) ↔ Synchronization (coordinate).
 
 ---
 
 ## Content Structure
 
-| Category | Description | Key Elements |
-|----------|-------------|--------------|
-| Coherence Patterns | Enhanced operations | [[Synchronization (pattern)]], [[Persistence (pattern)]], [[Resilience (pattern)]] |
-| Modulator Derivation | Universal modulator effects | ψA → Synchronization, ∇S → Persistence, λV → Resilience |
+| Category | Description | Key Elements | Polarity |
+|----------|-------------|--------------|----------|
+| Coherence Patterns | Enhanced operations | [[Persistence (pattern)]], [[Resilience (pattern)]], [[Synchronization (pattern)]] | P+/P-/P0 |
+| Modulator Derivation | Universal modulator effects | ∇S → Persistence (P+), λV → Resilience (P-), ψA → Synchronization (P0) | P+ → P- → P0 |
 | Primitive Enhancement | Extended capabilities | Phase+, Memory+, Recovery+ functionality |
 | Pattern Integration | Coordination mechanisms | Persistence ↔ Synchronization ↔ Resilience |
 | Operational Enhancement | Advanced functionality | Temporal coordination, information management, adaptive response |
@@ -43,9 +43,9 @@ Each pattern provides technical and humane mappings, advanced operational semant
 ## Core References
 
 **Coherence Patterns:**
-- [[Synchronization (pattern)]] - Temporal alignment pattern for coordinating operations across time
-- [[Persistence (pattern)]] - Memory preservation pattern for maintaining information across contexts
-- [[Resilience (pattern)]] - Recovery coordination pattern for managing system adaptation
+- [[Persistence (pattern)]] - Memory preservation pattern for maintaining information across contexts (P+)
+- [[Resilience (pattern)]] - Recovery coordination pattern for managing system adaptation (P-)
+- [[Synchronization (pattern)]] - Temporal alignment pattern for coordinating operations across time (P0)
 
 **Related Modules:**
 - [[00.2.2 - Coherence Primitives (index)]] - Foundation primitives that patterns enhance
@@ -58,9 +58,9 @@ Each pattern provides technical and humane mappings, advanced operational semant
 ## Key Principles
 
 1. **Modulator Derivation**
-   - Synchronization derives from ψA (Awareness) modulator effects
    - Persistence derives from ∇S (Structure) modulator effects
    - Resilience derives from λV (Void) modulator effects
+   - Synchronization derives from ψA (Awareness) modulator effects
 
 2. **Primitive Enhancement**
    - All coherence patterns must enhance, not replace, primitive operations
@@ -68,7 +68,7 @@ Each pattern provides technical and humane mappings, advanced operational semant
    - Pattern complexity emerges from modulator-primitive interactions
 
 3. **Pattern Integration**
-   - Patterns work in canonical integration: Persistence ↔ Synchronization ↔ Resilience
+   - Patterns work in canonical integration: Persistence ↔ Resilience ↔ Synchronization (P+ ↔ P- ↔ P0)
    - Pattern integration enables sophisticated coherence orchestration scenarios
    - Modulator effects enable context-specific pattern adaptation
 
@@ -77,6 +77,6 @@ Each pattern provides technical and humane mappings, advanced operational semant
 ## See Also
 
 - [[00.2 - Coherence Orchestration (index)]] - Parent coherence orchestration module
-- [[Synchronization (pattern)]] · [[Persistence (pattern)]] · [[Resilience (pattern)]]
+- [[Persistence (pattern)]] · [[Resilience (pattern)]] · [[Synchronization (pattern)]]
 - [[00.2.2 - Coherence Primitives (index)]] · [[00.0.3 - Modulators (index)]] · [[00.2.1 - Constants (index)]]
 - [[Structure (glossary)]] · [[Void (glossary)]] · [[Awareness (glossary)]]
